# grpc-nodejs-rust

./: Cargo.toml  build.rs  package.json  pnpm-lock.yaml
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/compiled_protos/: base.ts  counter.ts  hello_world.ts
client/scripts/: generate-types.ts
client/src/: app.ts
protos/: base.proto  counter.proto  hello_world.proto
server/: lib.rs  main.rs  utils.rs
server/compiled_protos/: base.rs  counter.rs  hello_world.rs  mod.rs
server/protos_utils/: base.rs  counter.rs  mod.rs
server/services/: hello_world.rs  mod.rs
server/services/counter/: actor.rs  mod.rs
