[package]
name = "grpc-nodejs-rust-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "server/main.rs"

[lib]
path = "server/lib.rs"

[dependencies]
async-trait = "0.1.80"
prost = "0.12.6"
ractor = "0.10.3"
tokio = { version = "1.38.0", features = ["full"] }
tonic = "0.11.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[build-dependencies]
tonic-build = "0.11.0"
